Modal fix (#133)
* applied appropriate z-index for .modal-backdrop
- was previosuly set too high which made it impossible to interact with modal content

* re-gulping after updating npm modules

--- a/assets/css/dulcet.style.css
+++ b/assets/css/dulcet.style.css
@@ -9573,6 +9573,7 @@ img.rl-logo {
 
 /* Flex Coulmns */
 .row-flex-wrap {
+  -webkit-flex-flow: row wrap;
   -ms-flex-line-pack: start;
       align-content: flex-start;
   -ms-flex: 0;
@@ -9708,6 +9709,9 @@ img.rl-logo {
 iframe {
   border: none; }
 
+.modal-backdrop {
+  z-index: 1002; }
+
 .img-polaroid {
   padding: 4px;
   background-color: #fff;
@@ -9788,7 +9792,8 @@ iframe {
   -webkit-column-count: 1;
   -webkit-column-gap: 10px;
   column-count: 1;
-  column-gap: 15px;
+  -moz-column-gap: 15px;
+       column-gap: 15px;
   clear: both; }
 
 .studyrooms .exhibit-bookmarkWidget-popup {
@@ -9801,7 +9806,8 @@ iframe {
     -webkit-column-count: 2;
     -webkit-column-gap: 10px;
     column-count: 2;
-    column-gap: 15px;
+    -moz-column-gap: 15px;
+         column-gap: 15px;
     clear: both; }
   .page-node-436 .exhibit-facet {
     width: 47%;
@@ -9815,7 +9821,8 @@ iframe {
     -webkit-column-count: 3;
     -webkit-column-gap: 10px;
     column-count: 3;
-    column-gap: 15px;
+    -moz-column-gap: 15px;
+         column-gap: 15px;
     clear: both; } }
 
 /* Residence Hall Librarians */
@@ -9954,7 +9961,8 @@ iframe {
 ul.rl-mainlinks {
   margin: 20px 0;
   padding: 0;
-  column-gap: 5px; }
+  -moz-column-gap: 5px;
+       column-gap: 5px; }
   ul.rl-mainlinks li {
     list-style: none; }
     ul.rl-mainlinks li a {
@@ -10891,7 +10899,8 @@ html {
   -moz-column-gap: 10px;
   -moz-column-fill: auto;
   column-count: 3;
-  column-gap: 15px;
+  -moz-column-gap: 15px;
+       column-gap: 15px;
   column-fill: auto; }
 
 .page-kiosks-edge .room_reserve {
@@ -12164,10 +12173,12 @@ ul.pdflinks a {
 
 /* blog grid display */
 .blogs-grid #rotate1 {
+  -moz-column-count: 2;
   column-count: 2; }
 
 @media (min-width: 992px) {
   .blogs-grid #rotate1 {
+    -moz-column-count: 3;
     column-count: 3; } }
 
 .blogs-grid #rotate1 li {
@@ -12677,13 +12688,16 @@ div.smallerThumbs .views-field-author {
   color: #6a6a6a; }
 
 .columns-2 {
-  column-count: 2; }
+  -moz-column-count: 2;
+       column-count: 2; }
 
 .columns-3 {
-  column-count: 3; }
+  -moz-column-count: 3;
+       column-count: 3; }
 
 .columns-4 {
-  column-count: 4; }
+  -moz-column-count: 4;
+       column-count: 4; }
 
 table[border="0"] thead, table[border="0"] tbody, table[border="0"] tr, table[border="0"] td, table.table-unstyled thead, table.table-unstyled tbody, table.table-unstyled tr, table.table-unstyled td {
   border: none; }
